# mechanistic-circuit-comparison

./: .gitignore  README.md  pyproject.toml
results/: summary.csv  training_logs.csv
scripts/: 01_generate_data.py  02_train_models.py  03_logit_lens.py  04_activation_patching.py  05_circuit_analysis.py  05b_extended_analysis.py  06_circuit_evolution.py
