[project]
name = "mechanistic-circuit-comparison"
version = "0.1.0"
description = "Mechanistic Circuit Comparison of Modular Arithmetic Tasks in Transformers"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "einops>=0.7",
    "transformer-lens>=1.19",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
